--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  	"start": "nodemon app/monitor.js"
+  },
+  "bin": {
+  	"monitor": "app/monitor.js"
   },
   "author": "",
   "license": "ISC",
